--- a/css/navModal.css
+++ b/css/navModal.css
@@ -3,29 +3,30 @@
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: #6070ff; 
+    background-color: rgba(96, 112, 255,0.7); ; /* Black w/ opacity */
   }
   
   /* Modal Content */
   .modal-content {
-    background-color: #fefefe;
+    background-color: rgba(96, 112, 255,0.7); /* Fallback color */
+    background-color: rgba(96, 112, 255,0.7);  /* Black w/ opacity */
     margin: auto;
     padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
+    width: 90%;
+    height: 100%;
   }
   
   /* The Close Button */
   .close {
-    color: #aaaaaa;
-    float: right;
+    position: fixed; /* Stay in place */
+    color: #ffffff;
+    margin-left: 85%;
     font-size: 28px;
     font-weight: bold;
   }
@@ -36,3 +37,18 @@
     text-decoration: none;
     cursor: pointer;
   }
+
+.modal-list {
+    padding-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.modal-list li a {
+  color: #ffffff;
+  font-size: 32px;
+  line-height: 44px;
+  font-weight: 600;
+  font-family: 'Poppins', sans-serif;
+}
