--- a/css/navModal.css
+++ b/css/navModal.css
@@ -51,4 +51,20 @@
   line-height: 44px;
   font-weight: 600;
   font-family: 'Poppins', sans-serif;
+position: relative;
+}
+a::before {
+  content: '';
+  background-color: white;
+  position: absolute;
+  left: 0;
+  bottom: 3px;
+  width: 100%;
+  height: 8px;
+  z-index: -1;
+  transition: all .3s ease-in-out;
+}
+a:hover::before {
+  bottom: 0;
+  height: 100%;
 }
