--- a/css/navModal.css
+++ b/css/navModal.css
@@ -1,58 +1,58 @@
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: #6070ff; 
-    background-color: rgba(96, 112, 255,0.7); ; /* Black w/ opacity */
-  }
-  
-  /* Modal Content */
-  .modal-content {
-    background-color: rgba(96, 112, 255,0.7); /* Fallback color */
-    background-color: rgba(96, 112, 255,0.7);  /* Black w/ opacity */
-    margin: auto;
-    padding: 20px;
-    width: 90%;
-    height: 100%;
-  }
-  
-  /* The Close Button */
-  .close {
-    position: fixed; /* Stay in place */
-    color: #ffffff;
-    margin-left: 85%;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-  }
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: #6070ff;
+  background-color: rgba(96, 112, 255, 0.7);  /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: rgba(96, 112, 255, 0.7); /* Fallback color */
+  margin: auto;
+  padding: 20px;
+  width: 90%;
+  height: 100%;
+}
+
+/* The Close Button */
+.close {
+  position: fixed; /* Stay in place */
+  color: #fff;
+  margin-left: 85%;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 .modal-list {
-    padding-top: 5rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  padding-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .modal-list li a {
-  color: #ffffff;
+  color: #fff;
   font-size: 32px;
   line-height: 44px;
   font-weight: 600;
   font-family: 'Poppins', sans-serif;
-position: relative;
+  position: relative;
 }
+
 a::before {
   content: '';
   background-color: white;
@@ -62,8 +62,9 @@ a::before {
   width: 100%;
   height: 8px;
   z-index: -1;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
+
 a:hover::before {
   bottom: 0;
   height: 100%;
