--- a/css/navModal.css
+++ b/css/navModal.css
@@ -69,3 +69,14 @@ a:hover::before {
   bottom: 0;
   height: 100%;
 }
+
+@media only screen and (min-width: 768px) {
+  .modal {
+    display: none;
+    background-color: transparent;
+  }
+
+  .modal-content {
+    display: none;
+  }
+}
