--- a/css/card.css
+++ b/css/card.css
@@ -1,92 +1,3 @@
-
-.grid-item {
-  margin: auto;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  padding: 16px;
-  gap: 12px;
-  min-width: 95%;
-  min-height: 552px;
-  background: #fff;
-  border: 1px solid #dfe1e6;
-  border-radius: 16px;
-  margin-bottom: 10vh;
-}
-
-.snap {
-  display: flex;
-  align-items: center;
-  margin: auto;
-  justify-content: center;
-  border-radius: 8px;
-  min-width: 100%;
-  min-height: 220px;
-}
-
-.tonic {
-  min-width: 100%;
-  max-height: 36px;
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  display: flex;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 44px;
-  color: #172b4d;
-  margin-bottom: 0;
-}
-
-.multi {
-  min-width: 100%;
-  min-height: 40px;
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 35px;
-  margin: 0;
-  line-height: 44px;
-  color: #172b4d;
-}
-
-.container {
-  display: flex;
-  gap: 2.5rem;
-  max-height: 18px;
-  min-width: 100%;
-  align-items: baseline;
-}
-
-.canopy {
-  display: flex;
-  max-width: 55px;
-  max-height: 16px;
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 13px;
-  line-height: 16px;
-  color: #344563;
-  margin-bottom: 0;
-}
-
-.details {
-  display: flex;
-  align-items: baseline;
-}
-
-.details p {
-  color: #7a869a;
-  font-family: 'Poppins', sans-serif;
-  font-style: bold;
-}
-
-.details img {
-  width: 8px;
-  height: 8px;
-  margin-right: 5px;
-}
-
 .content {
   min-width: 100%;
   min-height: 76px;
@@ -96,7 +7,6 @@
   font-size: 15px;
   line-height: 24px;
   color: #344563;
-  margin-bottom: 0;
 }
 
 .link {
@@ -104,6 +14,7 @@
   float: left;
   align-content: flex-start;
   padding: 0;
+  margin-bottom: 2rem;
   min-width: 100%;
   max-height: 10px;
   text-decoration: none;
