--- a/css/cardModal.css
+++ b/css/cardModal.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+}
 
 .card  {
   padding: 10px;
@@ -213,4 +219,47 @@ place-content: center;
 .row .btn:hover {
   background-color: #4053fc;
   color: #fff;
+}
+
+/* The Modal (background) */
+.modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.4rem;
+  min-width: 90%;
+  margin: auto;
+  padding: 1.3rem;
+  min-height: 250px;
+  position: relative;
+  top: 20%;
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 15px;
+  background-color: aqua;
+  z-index: 2;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(3px);
+  z-index: 1;
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: rgba(96, 112, 255); /* Fallback color */
+  margin: auto;
+  padding: 20px;
+  width: 90%;
+  height: 100%;
+  mix-blend-mode: multiply;
+  backdrop-filter: blur(5px);
 }
